移除jackson依赖，保证client能被正常引用